# advent-of-code

./: .gitignore  flake.nix  requirements.txt  run.py
py/2022/: day01.py  day02.py  day04.py  day08.py
py/2023/: day02.py  day03.py  day07.py  day08.py  day09.py
py/2024/: day02.py  day03.py  day04.py  day05.py  day07.py  day11.py
python/: pyproject.toml  run.py
python/py/2022/: day03.py  day06.py  day07.py
python/py/2023/: day01.py  day04.py  day05.py  day06.py
python/py/2024/: day01.py
python/scripts/: new_day.sh
rust/: Cargo.toml  run.sh
rust/scripts/: new_day.sh  template.rs
rust/src/: lib.rs  main.rs
scripts/: new_day.sh  template.py
