[project]
name = "simulations"
version = "3.12.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>2.3.0",
]


[dependency-groups]
dev = [
    "ruff>=0.14.7",
]
lint = [
    "black==25.1.0",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
lint.select = ["E", "F"]
lint.ignore = []


[tool.pytest.ini_options]
testpaths = ["test"]
minversion = "7.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = ["-ra", "-q"]

log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
